# life-assistant-link

./: Dockerfile  README.md  pyproject.toml
.docs/: data.yml  extra.md
.github/workflows/: publish.yml  readme-generate.yml  sonar.yml
app/: main.py
app/api/: health_controller.py
app/api/food/: food_controller.py  requests.py
app/api/v1/: zone.py
app/api/zone/: zone_controller.py
app/config/: setting.py
app/core/middleware/: error_handler.py  security.py
app/domain/food/: event.py  food_service.py
app/domain/zone/: event.py  event_service.py  repository.py  zone_repository.py  zone_service.py
app/infrastructure/: broker.py
test/api/: test_zone.py
test/domain/zone/: test_event.py  test_event_service.py  test_repository.py
test/integration/: test_rabbit_mq.py
