[tool.poetry]
name = "life-assistant-link"
version = "0.1.0"
description = ""
authors = ["igormoreiraalves <igor@biomainvestimentos.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
testcontainer-python-rabbitmq = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
